client2 folder added

--- a/client2/platformio.ini
+++ b/client2/platformio.ini
@@ -12,3 +12,5 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+lib_deps = amcewen/HttpClient@^2.2.0
+           sparkfun/SparkFun Qwiic 6Dof - LSM6DSO@^1.0.3
